--- a/views/register.html
+++ b/views/register.html
@@ -70,9 +70,9 @@
         <form class="formulario" action="register.html" method="POST">
             <h3 style="color:#1259c3 ;">Datos</h3>
             <div class="Nombre-usuario-email"><label for="nombre y apellido"></label>
-                <input type="text" id="nombre-apellido" name="nombre y apellido" placeholder="Nombre y apellido" required minlength="5">
+                <input type="text" id="nombre-apellido" name="nombre y apellido" placeholder="Nombre y apellido" required minlength="5" >
                 <label for="nombre de ususario"></label>
-                <input type="text" name="nombre-usuario" id="nombre-usuario" placeholder="Nombre de usuario" required minlength="2">
+                <input type="text" name="nombre-usuario" id="nombre-usuario" placeholder="Nombre de usuario" required minlength="2" maxlength="20">
                 <label for="email"></label>
                 <input type="email" name="Email" id="Email" placeholder="Email" required>
             </div>
