--- a/views/login.html
+++ b/views/login.html
@@ -74,7 +74,7 @@
                 </div>
                 <div class="usuario-login">
                     <label for="pass"><h3 style="color:#1259c3 ;">Contraseña</h3></label>
-                    <input type="password" name="pass" id="pass" required pattern="[A-Za-z0-9]+" maxlength="20">
+                    <input type="password" name="pass" id="pass" required pattern="[A-Za-z0-9]+" maxlength="20" minlength="10">
                 </div>
                 <button type="submit" class="submit-login">Enviar</button>
                 <a href="/register" class="register-login">Register</a>
