--- a/views/index.html
+++ b/views/index.html
@@ -175,7 +175,7 @@
             <article class="articulo">
                 <img src="images/img-tv-samsung-smart.jpg" id="imagen.size">
                 <article class="articulo-detail">
-                    <i class="fas fa-shipping-fast" id="chacho"></i>
+                    <i class="fas fa-shipping-fast" ></i>
                     <div class="box-item">
                         <p class="precio">$23200</p>
                         <p class="dyc"> 5% Off</p>
@@ -187,30 +187,44 @@
     </main>
 
     <footer>
-        <section>
-            <i class="fas fa-credit-card fa-2x" id="chacho" style="color: #1259c3;"></i>
-            <h3 class="centrado">Pagá con tarjeta o en efectivo</h3>
-            <br>
-            <p class="texto"> Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
-                puntos de pago. ¡Y siempre es seguro!</p>
-        </section>
-        <br>
-        <section>
-            <i class="fas fa-gift fa-2x" id="chacho" style="color: #1259c3;"></i>
-            <h3 class="centrado">Envío gratis desde $ 2.500</h3>
-            <br>
-            <p class="texto">
-                Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
-                productos. Es un beneficio de Mercado Puntos.</p>
-        </section>
-        <br>
-        <section>
+        <section class="contenedorfootertotal">
+            <section class="contenedorfootersubtotal">
+                <div class="contenedorsubsubproducto"><i class="fas fa-credit-card fa-2x" id="chacho"
+                        ></i></div>
+                        <br>
+                <div class="contenedorsubsubproducto">
+                    <h3 class="centrado">Pagá con tarjeta o en efectivo</h3>
+                </div>
+                <div class="contenedorsubsubproducto.">
+                    <p class="texto"> Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
+                        puntos de pago. ¡Y siempre es seguro!</p>
+                </div>
 
-            <i class="fas fa-user-shield fa-2x" id="chacho" style="color: #1259c3;"></i>
-            <h3 class="centrado">Seguridad, de principio a fin</h3>
-            <br>
-            <p class="texto">¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
-                porque estás siempre protegid@.</p>
+            </section>
+           
+            <section class="contenedorfootersubtotal">
+                <div class="contenedorsubsubproducto"> <i class="fas fa-gift fa-2x" id="chacho" ></i></div>
+                <br>
+                <div class="contenedorsubsubproducto">
+                    <h3 class="centrado">Envío gratis desde $ 2.500</h3>
+                </div>
+                <div class="contenedorsubsubproducto.">
+                    <p class="texto">
+                        Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
+                        productos. Es un beneficio de Mercado Puntos.</p>
+                </div>
+
+            </section>
+          
+            <section>
+
+                <i class="fas fa-user-shield fa-2x" id="chacho" ></i>
+               <br>
+                <h3 class="centrado">Seguridad, de principio a fin</h3>
+                
+                <p class="texto">¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
+                    porque estás siempre protegid@.</p>
+            </section>
         </section>
         <br><br>
         <section>
