--- a/public/css/style.css
+++ b/public/css/style.css
@@ -172,7 +172,7 @@ body {
 }
 
 .copy {
-    font-size: 12px;
+    font-size: 9px;
     color: #1259c3;
     font-weight: 1000;
 }
@@ -210,6 +210,7 @@ body {
     align-items: center;
     justify-content: center;
     padding-top: 5%;
+    color: #1259c3;
 }
 
 
@@ -474,7 +475,30 @@ main section article img {
 input:invalid {
     color: red;
 }
-
+.submit-login:hover{
+    background-color:#0022AA;
+    cursor: pointer;
+}
+.contenedorfootertotal{
+    display: flex;
+    flex-direction: column;
+}
+.contenedorfootersubtotal{
+    display: flex;
+    flex-direction: column;
+   
+}
+.contenedorsubsubproducto{
+    display: flex;
+    justify-content: center;
+   
+}
+.contenedorsubsubproducto{
+   margin-left: 1%;
+   margin-right: 1%;
+    
+   
+}
 @media (min-width :361px) {
     .dyd {
         display: none;
@@ -491,10 +515,9 @@ input:invalid {
 
 @media (min-width : 769px) {
     .texto {
-        font-size: 20px;
-        text-align: center;
-        margin-left: 25%;
-        margin-right: 25%;
+        font-size: 10px;
+       text-align: center;
+       margin: 0;
     }
 
     .burger-menu {
@@ -539,6 +562,15 @@ input:invalid {
     .fa-shipping-fast:hover{
        
         transform: rotate(270deg);
+    }
+    .contenedorfootertotal{
+        display: flex;
+        flex-direction: row;
+        gap: 1%;
+    }
+    #chacho:hover{
+       color: #39b54a;
+
     }
 }
 
