--- a/public/css/style.css
+++ b/public/css/style.css
@@ -209,7 +209,8 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding-top: 5%;
+font-size: 2em;
+    margin-bottom: 10px;
     color: #1259c3;
 }
 
