--- a/views/index.html
+++ b/views/index.html
@@ -189,7 +189,7 @@
     <footer>
         <section class="contenedorfootertotal">
             <section class="contenedorfootersubtotal">
-                <div class="contenedorsubsubproducto"><i class="fas fa-credit-card fa-2x" id="chacho"
+                <div class="contenedorsubsubproducto"><i class="fas fa-credit-card" id="chacho"
                         ></i></div>
                         <br>
                 <div class="contenedorsubsubproducto">
@@ -203,7 +203,7 @@
             </section>
            
             <section class="contenedorfootersubtotal">
-                <div class="contenedorsubsubproducto"> <i class="fas fa-gift fa-2x" id="chacho" ></i></div>
+                <div class="contenedorsubsubproducto"> <i class="fas fa-gift" id="chacho" ></i></div>
                 <br>
                 <div class="contenedorsubsubproducto">
                     <h3 class="centrado">Envío gratis desde $ 2.500</h3>
@@ -218,7 +218,7 @@
           
             <section>
 
-                <i class="fas fa-user-shield fa-2x" id="chacho" ></i>
+                <i class="fas fa-user-shield " id="chacho" ></i>
                <br>
                 <h3 class="centrado">Seguridad, de principio a fin</h3>
                 
