--- a/views/index.html
+++ b/views/index.html
@@ -21,13 +21,15 @@
                 <div class="logo">
                     <img src="images/logo-mercado-liebre.svg">
                 </div>
-
-                <div class="buscar">
+                <form class="buscar" action="#" method="POST">
                     <input class="buscar-input" type="text" placeholder="  Buscar..." required>
                     <button class="lupa">
                         <i class="fas fa-search"></i>
                     </button>
-                </div>
+                </form>
+                
+                   
+               
                 <div class="compracuotas">
                     <div class="compra"><i class="fas fa-hand-holding-usd"></i>
                         <h5>Compra en cuotas y sin tarjeta de credito</h5>
